putting all exercises together

--- a/exercise1/exercise1.html
+++ b/exercise1/exercise1.html
@@ -5,7 +5,7 @@
 
         <title>Babylon.js sample code</title>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style/style.css">
 
         <!-- Babylon.js -->
         <script src="https://code.jquery.com/pep/0.4.2/pep.min.js"></script>
@@ -26,6 +26,6 @@
     </head>
 <body>
     <canvas id="renderCanvas"></canvas>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="/exercise1/exercise1.js"></script>
 </body>
 </html>
