--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -26,6 +26,6 @@
     </head>
 <body>
     <canvas id="renderCanvas"></canvas>
-    <script type="text/javascript" src="/exercise4/exercise4.js"></script>
+    <script type="text/javascript" src="/exercise1/script.js"></script>
 </body>
 </html>
