--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -26,6 +26,6 @@
     </head>
 <body>
     <canvas id="renderCanvas"></canvas>
-    <script type="text/javascript" src="/exercise1/exercise1.js"></script>
+    <script type="text/javascript" src="/exercise2/script.js"></script>
 </body>
 </html>
