--- a/exercise3/index.html
+++ b/exercise3/index.html
@@ -26,6 +26,6 @@
     </head>
 <body>
     <canvas id="renderCanvas"></canvas>
-    <script type="text/javascript" src="/exercise3/exercise3.js"></script>
+    <script type="text/javascript" src="/exercise3/script.js"></script>
 </body>
 </html>
