--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -26,6 +26,6 @@
     </head>
 <body>
     <canvas id="renderCanvas"></canvas>
-    <script type="text/javascript" src="/exercise2/exercise2.js"></script>
+    <script type="text/javascript" src="/exercise4/script.js"></script>
 </body>
 </html>
