--- a/sun-earth-moon/index.html
+++ b/sun-earth-moon/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-        <title>Babylon.js sample code</title>
+        <title>Sun, Earth and Moon</title>
 
         <link rel="stylesheet" href="/style/style.css">
 
@@ -24,8 +24,9 @@
         <script src="https://preview.babylonjs.com/serializers/babylonjs.serializers.min.js"></script>
         <script src="https://preview.babylonjs.com/gui/babylon.gui.min.js"></script>
     </head>
-<body>
-    <canvas id="renderCanvas"></canvas>
-    <script type="text/javascript" src="/exercise9/script.js"></script>
-</body>
+
+    <body>
+        <canvas id="renderCanvas"></canvas>
+        <script type="text/javascript" src="/sun-earth-moon/script.js"></script>
+    </body>
 </html>
