--- a/class-exercises/exercise7/index.html
+++ b/class-exercises/exercise7/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-        <title>Babylon.js sample code</title>
+        <title>Exercise 7</title>
 
         <link rel="stylesheet" href="/style/style.css">
 
@@ -26,6 +26,6 @@
     </head>
 <body>
     <canvas id="renderCanvas"></canvas>
-    <script type="text/javascript" src="/ac1/script.js"></script>
+    <script type="text/javascript" src="/class-exercises/exercise7/script.js"></script>
 </body>
 </html>
